<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LastActivity"
    android:orientation="vertical"
    android:background="#EFCD5E">

    <TextView
        android:id="@+id/developer"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/developerText"
        android:textAlignment="center"
        android:textSize="35sp"
        android:layout_gravity="center"
        android:padding="20sp"/>

    <ImageView
        android:layout_width="360dp"
        android:layout_height="325dp"
        android:src="@drawable/android_dev"
        android:layout_gravity="center"
        android:padding="5dp"
        android:scaleType="fitCenter"/>

    <TextView
        android:id="@+id/mail_link"
        android:layout_width="wrap_content"
        android:layout_height="185dp"
        android:layout_gravity="center"
        android:text="@string/mail_link"
        android:textAlignment="center"
        android:textColor="#00796B"
        android:textSize="30sp" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#EFCD5E"
        android:text="@string/back_button"
        android:textColor="#616161"
        android:textSize="20sp" />
<!--    android:onClick="onClickGoMain7"-->

</LinearLayout>